--- a/report/refs.bib
+++ b/report/refs.bib
@@ -69,6 +69,13 @@
    year = 2012
 }
 
+@Book{page,
+  author = 	 "Abraham Silberschatz, Greg Gagne, and Peter Baer Galvin",
+  title = 	 "Operating System Concepts",
+  publisher = 	 "Wiley Global Education",
+  year = 	 1983
+}
+
 
 @Book{task,
   author = 	 "THOMAS E. ANDERSON, BRIAN N. BERSHAD, EDWARD D. LAZOWSKA, and HENRY M. LEVY",
