--- a/report/refs.bib
+++ b/report/refs.bib
@@ -69,6 +69,13 @@
    year = 2012
 }
 
+@misc{ramref,
+   author = "FRANK DENNEMAN",
+   title="Memory Deep Dive: Memory Subsystem Bandwidth",
+   howpublished = "\url{http://frankdenneman.nl/2015/02/19/memory-deep-dive-memory-subsystem-bandwidth/}",
+   year = 2015
+}
+
 @Book{page,
   author = 	 "Abraham Silberschatz, Greg Gagne, and Peter Baer Galvin",
   title = 	 "Operating System Concepts",
