--- a/report/report.tex
+++ b/report/report.tex
@@ -92,7 +92,7 @@
 %% These include the actual text
 \include{chapter1}
 \include{chapter2}
-\include{chapter3}
+%\include{chapter3}
 \include{chapter4}
 %\include{chapter5}
 %\include{chapter6}
