--- a/report/refs.bib
+++ b/report/refs.bib
@@ -76,6 +76,13 @@
    year = 2015
 }
 
+@misc{ramdata,
+   author = "UNKNOWN",
+   title="SiSoft Sandra 2011 SP5 Cache Ram Katencies",
+   howpublished = "\url{https://www.google.com/search?q=L1,+L2,+L3+cache+speed&espv=2&biw=1440&bih=761&source=lnms&tbm=isch&sa=X&ved=0ahUKEwif4fWD64zLAhUC22MKHbcsBqIQ_AUIBigB&dpr=2#imgrc=D_4iUQ2e2u_73M%3A}",
+   year = 2011
+}
+
 @Book{page,
   author = 	 "Abraham Silberschatz, Greg Gagne, and Peter Baer Galvin",
   title = 	 "Operating System Concepts",
