--- a/report/report.tex
+++ b/report/report.tex
@@ -92,10 +92,12 @@
 %% These include the actual text
 \include{chapter1}
 \include{chapter2}
-%\include{chapter3}
+\include{chapter3}
 \include{chapter4}
 %\include{chapter5}
 %\include{chapter6}
+
+\include{appendix1}
 
 \bibliography{refs}             % this causes the references to be
                                 % listed
@@ -105,5 +107,4 @@
                                 % possible values are plain and abbrv
 %% Appendices start here
 %\appendix
-\include{appendix1}
 \end{document}
