--- a/report/appendix1.tex
+++ b/report/appendix1.tex
@@ -2,59 +2,59 @@
 
 \small
 \begin{center}
-\begin{tabular}{| p{4cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} |}
+\begin{tabular}{| p{4cm} | p{2cm} | p{2cm} | p{2cm} | p{2.5cm} | p{2cm} }
 \hline
-Operation  & Base Hardware Performance  & Estimated Software Overhead  & Predicted Time  & Measured Time   \\
+Operation  & Base Hardware Performance  & Estimated Software Overhead  & Predicted Time  & Measured Time  & Std \\
 \hline 
-CPU & & & & \\
+CPU & & & & &\\
 \hline
-Reading time & 9 cycles & 8 cycles & 17 cycles & 19.51327 cycles \\
-Loop overhead & 2 cycles& 3 cycles& 5 cycles& 5.726476 cycles\\
-System call & 200 cycles& 10000 cycles& 10200 cycles& 43020 cycles \\
-Task creation : process & 10000 cycles& 190000 cycles& 200000 cycles& 311751 cycles \\
-Task creation : kernel thread    & 1000 cycles& 19000 cycles& 20000 cycles& 16509 cycles\\
-Context switch : process & 20000 cycles& 5000 cycles& 25000 cycles& 133221  cycles\\
-Context switch : kernel thread    & 2000 cycles& 500 cycles& 2500 cycles& 9752 cycles\\
+Reading time & 9 cycles & 8 cycles & 17 cycles & 19.51327 cycles & 1.9087\\
+Loop overhead & 2 cycles& 3 cycles& 5 cycles& 5.726476 cycles & 0.1728 \\
+System call & 200 cycles& 10000 cycles& 10200 cycles& 43020 cycles & 1702 \\
+Task creation : process & 10000 cycles& 190000 cycles& 200000 cycles& 311751 cycles & 11321\\
+Task creation : kernel thread    & 1000 cycles& 19000 cycles& 20000 cycles& 16509 cycles & 827\\
+Context switch : process & 20000 cycles& 5000 cycles& 25000 cycles& 133221  cycles & 3428\\
+Context switch : kernel thread    & 2000 cycles& 500 cycles& 2500 cycles& 9752 cycles & 439\\
 \hline 
-Memory & & & & \\
+Memory & & & & &\\
 \hline
-RAM Access Time : L1 Cache (64KB) &   5 cycles  & 2 cycles & 7 cycles &  4.5 cycles \\
-RAM Access Time : L2 Cache (256KB) & 10 cycles & 4 cycles & 14 cycles &  8.2 cycles\\
-RAM Access Time : L3 Cache (6MB) & 15 cycles & 6 cycles & 21 cycles  & 21.2 cycles\\
-RAM Access Time : Main Memory (8G) & 30 cycles & 10 cycles & 40 cycles & 197.3 cycles\\
-RAM Read Bandwidth & & & 12800MB/s & 8754MB/s \\
-RAM Write Bandwidth & & & 12800MB/s & 6902MB/s \\
-Page Fault Service Time & 8192 cycles& 8000 cycles& 16192 cycles& 9898 cycles\\
+RAM Access Time : L1 Cache (64KB) &   5 cycles  & 2 cycles & 7 cycles &  4.5 cycles & 0.1212 \\
+RAM Access Time : L2 Cache (256KB) & 10 cycles & 4 cycles & 14 cycles &  8.2 cycles & 0.2059\\
+RAM Access Time : L3 Cache (6MB) & 15 cycles & 6 cycles & 21 cycles  & 21.2 cycles & 0.4529\\
+RAM Access Time : Main Memory (8G) & 90 cycles & 60 cycles & 150 cycles & 197.3 cycles & 6.2800\\
+RAM Read Bandwidth & & & 12800MB/s & 8754MB/s & 99.49 \\
+RAM Write Bandwidth & & & 12800MB/s & 6902MB/s & 92.45\\
+Page Fault Service Time & 8192 cycles& 8000 cycles& 16192 cycles& 8528 cycles & 11.33405\\
 \end{tabular}
 \end{center}
 
 
 
-\small
-\begin{center}
-\begin{tabular}{| p{4cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} |}
+%\small
+%\begin{center}
+%\begin{tabular}{| p{4cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} |}
 
-\hline 
-Network & & & & \\
-\hline
-Loopback RTT & 20000 cycles& 5000 cycles& 25000 cycles& 69882 cycles\\
-Remote RTT & 100000 cycles& 10000 cycles& 110000 cycles& 627772 cycles\\
-Loopback Peak Bandwidth & & & 1600 MB/s & 1540 MB/s \\
-Remote Peak Bandwidth & & &  125 MB/s  & 133 MB/s\\
-Loopback Connection Setup & 35000 cycles& 5000 cycles& 40000 cycles& 306665 cycles \\
-Loopback Connection Tear-down & 20000 cycles& 3000 cycles& 23000 cycles& 54334 cycles \\
-Remote Connection Setup & 300000  cycles& 30000 cycles& 330000 cycles& 622923 cycles\\
-Remote Connection Tear-down & 150000  cycles& 15000 cycles& 165000 cycles& 141333 cycles\\
+%\hline 
+%Network & & & & \\
+%\hline
+%Loopback RTT & 20000 cycles& 5000 cycles& 25000 cycles& 69882 cycles\\
+%Remote RTT & 100000 cycles& 10000 cycles& 110000 cycles& 627772 cycles\\
+%Loopback Peak Bandwidth & & & 1600 MB/s & 1540 MB/s \\
+%Remote Peak Bandwidth & & &  125 MB/s  & 133 MB/s\\
+%Loopback Connection Setup & 35000 cycles& 5000 cycles& 40000 cycles& 306665 cycles \\
+%Loopback Connection Tear-down & 20000 cycles& 3000 cycles& 23000 cycles& 54334 cycles \\
+%Remote Connection Setup & 300000  cycles& 30000 cycles& 330000 cycles& 622923 cycles\\
+%Remote Connection Tear-down & 150000  cycles& 15000 cycles& 165000 cycles& 141333 cycles\\
 
-\hline 
-File System& & & & \\
-\hline
-File Cache Size & & & 2GB & 3.3GB \\ 
-Sequential File Read Time Per Block& 19000 cycles & 1000 cycles& 20000 cycles& 300106 cycles\\
-Random File Read Time Per Block& 19000 cycles& 1000 cycles& 20000 cycles& 492654 cycles \\
-Sequential Remote File Read Time Per Block& 800000 cycles& 10000 cycles& 810000 cycles& 1089600 cycles\\
-Random Remote File Read Time Per Block& 800000 cycles& 10000 cycles& 810000 cycles& 1074543 cycles\\
-File Contention(15 processes) & 490000 cycles& 15000 cycles& 505000 cycles& 590147 cycles\\
+%\hline 
+%File System& & & & \\
+%\hline
+%File Cache Size & & & 2GB & 3.3GB \\ 
+%Sequential File Read Time Per Block& 19000 cycles & 1000 cycles& 20000 cycles& 300106 cycles\\
+%Random File Read Time Per Block& 19000 cycles& 1000 cycles& 20000 cycles& 492654 cycles \\
+%Sequential Remote File Read Time Per Block& 800000 cycles& 10000 cycles& 810000 cycles& 1089600 cycles\\
+%Random Remote File Read Time Per Block& 800000 cycles& 10000 cycles& 810000 cycles& 1074543 cycles\\
+%File Contention(15 processes) & 490000 cycles& 15000 cycles& 505000 cycles& 590147 cycles\\
 
-\end{tabular}
-\end{center}
+%\end{tabular}
+%\end{center}
