--- a/report/appendix1.tex
+++ b/report/appendix1.tex
@@ -28,33 +28,31 @@ Page Fault Service Time & 8192 cycles& 8000 cycles& 16192 cycles& 8528 cycles & 
 \end{tabular}
 \end{center}
 
+\small
+\begin{center}
+\begin{tabular}{| p{4cm} | p{2cm} | p{2cm} | p{2cm} | p{2.5cm} | p{2cm}} 
 
+\hline 
+Network & & & & & \\
+\hline
+Loopback RTT & 0.01 ms & 0.05 ms& 0.06 ms & 0.03ms & 0.00725ms \\
+Remote RTT & 0.05 ms& 0.2 ms & 0.25 ms & 0.27ms & 0.05ms\\
+Loopback Peak Bandwidth & & & 1600 MB/s & 1540 MB/s \\
+Remote Peak Bandwidth & & &  125 MB/s  & 133 MB/s\\
+Loopback Connection Setup & 35000 cycles& 5000 cycles& 40000 cycles& 306665 cycles \\
+Loopback Connection Tear-down & 20000 cycles& 3000 cycles& 23000 cycles& 54334 cycles \\
+Remote Connection Setup & 300000  cycles& 30000 cycles& 330000 cycles& 622923 cycles\\
+Remote Connection Tear-down & 150000  cycles& 15000 cycles& 165000 cycles& 141333 cycles\\
 
-%\small
-%\begin{center}
-%\begin{tabular}{| p{4cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} |}
+\hline 
+File System& & & & \\
+\hline
+File Cache Size & & & 2GB & 3.3GB \\ 
+Sequential File Read Time Per Block& 19000 cycles & 1000 cycles& 20000 cycles& 300106 cycles\\
+Random File Read Time Per Block& 19000 cycles& 1000 cycles& 20000 cycles& 492654 cycles \\
+Sequential Remote File Read Time Per Block& 800000 cycles& 10000 cycles& 810000 cycles& 1089600 cycles\\
+Random Remote File Read Time Per Block& 800000 cycles& 10000 cycles& 810000 cycles& 1074543 cycles\\
+File Contention(15 processes) & 490000 cycles& 15000 cycles& 505000 cycles& 590147 cycles\\
 
-%\hline 
-%Network & & & & \\
-%\hline
-%Loopback RTT & 20000 cycles& 5000 cycles& 25000 cycles& 69882 cycles\\
-%Remote RTT & 100000 cycles& 10000 cycles& 110000 cycles& 627772 cycles\\
-%Loopback Peak Bandwidth & & & 1600 MB/s & 1540 MB/s \\
-%Remote Peak Bandwidth & & &  125 MB/s  & 133 MB/s\\
-%Loopback Connection Setup & 35000 cycles& 5000 cycles& 40000 cycles& 306665 cycles \\
-%Loopback Connection Tear-down & 20000 cycles& 3000 cycles& 23000 cycles& 54334 cycles \\
-%Remote Connection Setup & 300000  cycles& 30000 cycles& 330000 cycles& 622923 cycles\\
-%Remote Connection Tear-down & 150000  cycles& 15000 cycles& 165000 cycles& 141333 cycles\\
-
-%\hline 
-%File System& & & & \\
-%\hline
-%File Cache Size & & & 2GB & 3.3GB \\ 
-%Sequential File Read Time Per Block& 19000 cycles & 1000 cycles& 20000 cycles& 300106 cycles\\
-%Random File Read Time Per Block& 19000 cycles& 1000 cycles& 20000 cycles& 492654 cycles \\
-%Sequential Remote File Read Time Per Block& 800000 cycles& 10000 cycles& 810000 cycles& 1089600 cycles\\
-%Random Remote File Read Time Per Block& 800000 cycles& 10000 cycles& 810000 cycles& 1074543 cycles\\
-%File Contention(15 processes) & 490000 cycles& 15000 cycles& 505000 cycles& 590147 cycles\\
-
-%\end{tabular}
-%\end{center}
+\end{tabular}
+\end{center}
