--- a/report/report.tex
+++ b/report/report.tex
@@ -94,7 +94,7 @@
 \include{chapter2}
 \include{chapter3}
 \include{chapter4}
-%\include{chapter5}
+\include{chapter5}
 %\include{chapter6}
 
 \include{appendix1}
