--- a/report/appendix1.tex
+++ b/report/appendix1.tex
@@ -48,11 +48,11 @@ Remote Connection Tear-down & 150000  cycles& 15000 cycles& 165000 cycles& 14133
 File System& & & & \\
 \hline
 File Cache Size & & & 2GB & 3.3GB \\ 
-Sequential File Read Time Per Block& 19000 cycles & 1000 cycles& 20000 cycles& 300106 cycles\\
-Random File Read Time Per Block& 19000 cycles& 1000 cycles& 20000 cycles& 492654 cycles \\
-Sequential Remote File Read Time Per Block& 800000 cycles& 10000 cycles& 810000 cycles& 1089600 cycles\\
-Random Remote File Read Time Per Block& 800000 cycles& 10000 cycles& 810000 cycles& 1074543 cycles\\
-File Contention(15 processes) & 490000 cycles& 15000 cycles& 505000 cycles& 590147 cycles\\
+Sequential File Read Time Per Block& 19000 cycles & 1000 cycles& 20000 cycles& 300106 cycles & 10085 cycles\\
+Random File Read Time Per Block& 19000 cycles& 1000 cycles& 20000 cycles& 492654 cycles & 12320 cycles \\
+Sequential Remote File Read Time Per Block& 800000 cycles& 10000 cycles& 810000 cycles& 1089600 cycles & 20334 cycles\\
+Random Remote File Read Time Per Block& 800000 cycles& 10000 cycles& 810000 cycles& 1074543 cycles & 10004 cycles\\
+File Contention(15 processes) & 490000 cycles& 15000 cycles& 505000 cycles& 590147 cycles & 25980 cycles \\
 
 \end{tabular}
 \end{center}
