--- a/report/chapter6.tex
+++ b/report/chapter6.tex
@@ -12,7 +12,8 @@ So I prepared 40 files with different sizes ranging from 1GB to 4GB. We read eac
 Our computer main memory is 8GB. So the cache must be less than 8GB; Besides, the project web page says it is a notable fraction of main memory and can be several GBs. So we predict it is 2GBs.
 
 \paragraph{Results}
-We present our measure results. By the way, we only include result from 3GB to 4GB, because the cache size is in this range.
+We present our measure results. By the way, we did not show the results of files that are less than 3GB, we have run them and narrow down 
+narrow the range from 3GB to 4GB. So we only include result from 3GB to 4GB here.
 
 \begin{center}
 \begin{tabular}{l*{6}{c}r}
@@ -41,13 +42,13 @@ File Size             &  Cycles/MB\\
 \end{figure}
 
 \paragraph{Discussion}
-The graph shows that the file cache size is between 3300MB and 3500MB. Before this experiment, I did not realize that OS will use so many spaces for file cache. This optimisation speed up file reading time.
+The graph shows that the file cache size is between 3300MB and 3500MB. Before this experiment, I did not realize that OS will use so many spaces for file cache. This optimization speed up file reading time significantly. I do this measurement when my computer is free. If my computer are running many applications that consume many memory, then I think OS could not provide so much memory for file caching.
 
 \section{File read time}
 In this part, we report for both sequential and random access as a function of file size.
 
 \paragraph{Methodology}
-First, in order not to measure cached data, we want to set O\_DIRECT flag when opening a file, which could minimize cache effects of the I/O from this file. But Mac OS does not support O\_DIRECT. So we looked through Apple document and find we can set F\_NOCACHE in fcntl().
+First, in order not to measure cached data, we want to set O\_DIRECT flag when opening a file, which could minimize cache effects of the I/O from this file. But Mac OS does not support O\_DIRECT. So we looked through Apple document and find we can set F\_NOCACHE flag in fcntl().
 
 Besides, we use read() for sequential access, because read() will modify file pointer that fit the situation; However for random access it is bad to use read(), because we have to use lseek() to move the file pointer to target position which will significantly cost time. So we use pread() instead of read() for random access. Pread() works just like read() but reads from the specified position in the file without modifying the file pointer.
 
@@ -67,20 +68,20 @@ We present our measure results. The base file is 4KB, and we define log(4KB) = 2
 \end{figure}
 
 \begin{center}
-\begin{tabular}{| p{4cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} |}
-File Size &  Base Hardware Performance  & Estimated Software Overhead  & Predicted Time  & Measured Time   \\
+\begin{tabular}{| p{2cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} | p{3cm}}
+File Size &  Base Hardware Performance  & Estimated Software Overhead  & Predicted Time  & Measured Time & Std  \\
 
 \hline
-4KB & 19000 cycles& 1000 cycles& 20000 cycles& 401481 cycles\\ 
-8KB & 19000 cycles& 1000 cycles& 20000 cycles& 475677 cycles\\ 
-16KB & 19000 cycles& 1000 cycles& 20000 cycles& 501356 cycles\\
-32KB & 19000 cycles& 1000 cycles& 20000 cycles& 670260 cycles\\
-64KB & 19000 cycles& 1000 cycles& 20000 cycles& 489722 cycles\\
-128KB & 19000 cycles& 1000 cycles& 20000 cycles& 397495 cycles\\
-256KB & 19000 cycles& 1000 cycles& 20000 cycles& 293712 cycles\\
-512KB & 19000 cycles& 1000 cycles& 20000 cycles& 300106 cycles\\
-1024KB & 19000 cycles& 1000 cycles& 20000 cycles& 281106 cycles\\
-2048KB & 19000 cycles& 1000 cycles& 20000 cycles& 287629 cycles\\
+4KB & 19000 cycles& 1000 cycles& 20000 cycles& 401481 cycles & 10665 cycles \\ 
+8KB & 19000 cycles& 1000 cycles& 20000 cycles& 475677 cycles & 13289 cycles \\ 
+16KB & 19000 cycles& 1000 cycles& 20000 cycles& 501356 cycles & 10032 cycles \\
+32KB & 19000 cycles& 1000 cycles& 20000 cycles& 670260 cycles & 15723 cycles \\
+64KB & 19000 cycles& 1000 cycles& 20000 cycles& 489722 cycles & 12875 cycles \\
+128KB & 19000 cycles& 1000 cycles& 20000 cycles& 397495 cycles & 12200 cycles \\
+256KB & 19000 cycles& 1000 cycles& 20000 cycles& 293712 cycles & 9200 cycles \\
+512KB & 19000 cycles& 1000 cycles& 20000 cycles& 300106 cycles &  10085 cycles \\
+1024KB & 19000 cycles& 1000 cycles& 20000 cycles& 281106 cycles & 5602 cycles \\
+2048KB & 19000 cycles& 1000 cycles& 20000 cycles& 287629 cycles & 6001 cycles \\
 
 \end{tabular}
 \end{center}
@@ -88,19 +89,19 @@ File Size &  Base Hardware Performance  & Estimated Software Overhead  & Predict
 Above is the result of sequential access. We can see on average it takes about 300000-600000 cycles to read each file block, far exceeding than we predicted previously.
 
 \begin{center}
-\begin{tabular}{| p{4cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} |}
-File Size   & Base Hardware Performance  & Estimated Software Overhead  & Predicted Time  & Measured Time   \\
+\begin{tabular}{| p{2cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} | p{3cm} }
+File Size   & Base Hardware Performance  & Estimated Software Overhead  & Predicted Time  & Measured Time  & Std \\
 \hline
-4KB & 19000 cycles& 1000 cycles& 20000 cycles& 420067 cycles\\ 
-8KB & 19000 cycles& 1000 cycles& 20000 cycles& 393597 cycles\\ 
-16KB & 19000 cycles& 1000 cycles& 20000 cycles& 502322 cycles\\
-32KB & 19000 cycles& 1000 cycles& 20000 cycles& 405538 cycles\\
-64KB & 19000 cycles& 1000 cycles& 20000 cycles& 425528 cycles\\
-128KB & 19000 cycles& 1000 cycles& 20000 cycles& 426442 cycles\\
-256KB & 19000 cycles& 1000 cycles& 20000 cycles& 504624 cycles\\
-512KB & 19000 cycles& 1000 cycles& 20000 cycles& 492654 cycles\\
-1024KB & 19000 cycles& 1000 cycles& 20000 cycles& 430804 cycles\\
-2048KB & 19000 cycles& 1000 cycles& 20000 cycles& 426658 cycles\\
+4KB & 19000 cycles& 1000 cycles& 20000 cycles& 420067 cycles & 17352 cycles\\ 
+8KB & 19000 cycles& 1000 cycles& 20000 cycles& 393597 cycles & 13847 cycles\\ 
+16KB & 19000 cycles& 1000 cycles& 20000 cycles& 502322 cycles & 15555 cycles\\
+32KB & 19000 cycles& 1000 cycles& 20000 cycles& 405538 cycles & 14200 cycles\\
+64KB & 19000 cycles& 1000 cycles& 20000 cycles& 425528 cycles & 12222 cycles\\
+128KB & 19000 cycles& 1000 cycles& 20000 cycles& 426442 cycles & 13902 cycles \\
+256KB & 19000 cycles& 1000 cycles& 20000 cycles& 504624 cycles & 10002 cycles\\
+512KB & 19000 cycles& 1000 cycles& 20000 cycles& 492654 cycles & 12320 cycles \\
+1024KB & 19000 cycles& 1000 cycles& 20000 cycles& 430804 cycles & 10800 cycles\\
+2048KB & 19000 cycles& 1000 cycles& 20000 cycles& 426658 cycles & 9602 cycles \\
 
 \end{tabular}
 \end{center}
@@ -111,6 +112,8 @@ Above is the result of random access. We can see on average it takes about 40000
 As we have predicted, random access is almost as fast as sequential access due to SSD. But we predict cycles wrongly. Without file cache, it would be very expensive to do file reading. Each block would cost almost 300000-600000 cycles on average.
 
 Then I remove F\_NOCACHE flag to do file reading, finding that it only takes about 1000-2000 cycles per block, which is so cheap compared with no cache. It speeds up over 100 times. So, in most situations open file with cache is good for program performance.
+
+As for "sequential" access might not be sequential, we have to seek the next right position for sequential read without cache. Because contents in a file may not be consecutive.
 
 \section{Remote file read time}
 In this section, we conduct the previous experiment for a remote file system.
@@ -135,18 +138,18 @@ We present our measure results. The base file is 4KB, and we define log(4KB) = 2
 \end{figure}
 
 \begin{center}
-\begin{tabular}{| p{4cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} |}
-File Size  & Base Hardware Performance  & Estimated Software Overhead  & Predicted Time  & Measured Time   \\
+\begin{tabular}{| p{2cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} | p{3cm} }
+File Size  & Base Hardware Performance  & Estimated Software Overhead  & Predicted Time  & Measured Time  & Std \\
 \hline
-8KB & 800000 cycles& 10000 cycles& 810000 cycles& 1060023 cycles\\ 
-16KB & 800000 cycles& 10000 cycles& 810000 cycles& 1037613 cycles\\ 
-32KB & 800000 cycles& 10000 cycles& 810000 cycles& 1155908 cycles\\
-64KB & 800000 cycles& 10000 cycles& 810000 cycles& 1127454 cycles\\
-128KB & 800000 cycles& 10000 cycles& 810000 cycles& 1134455 cycles\\
-256KB & 800000 cycles& 10000 cycles& 810000 cycles& 1105819 cycles\\
-512KB & 800000 cycles& 10000 cycles& 810000 cycles& 1085479 cycles\\
-1024KB & 800000 cycles& 10000 cycles& 810000 cycles& 1089600 cycles\\
-2048KB & 800000 cycles& 10000 cycles& 810000 cycles& 1074542 cycles\\
+8KB & 800000 cycles& 10000 cycles& 810000 cycles& 1060023 cycles & 12040 cycles \\ 
+16KB & 800000 cycles& 10000 cycles& 810000 cycles& 1037613 cycles & 11025 cycles\\ 
+32KB & 800000 cycles& 10000 cycles& 810000 cycles& 1155908 cycles & 20301 cycles\\
+64KB & 800000 cycles& 10000 cycles& 810000 cycles& 1127454 cycles & 18750 cycles\\
+128KB & 800000 cycles& 10000 cycles& 810000 cycles& 1134455 cycles & 23004 cycle \\
+256KB & 800000 cycles& 10000 cycles& 810000 cycles& 1105819 cycles & 13334 cycle \\
+512KB & 800000 cycles& 10000 cycles& 810000 cycles& 1085479 cycles & 17648 cycles\\
+1024KB & 800000 cycles& 10000 cycles& 810000 cycles& 1089600 cycles & 20334 cycles\\
+2048KB & 800000 cycles& 10000 cycles& 810000 cycles& 1074542 cycles & 17778 cycles \\
 
 \end{tabular}
 \end{center}
@@ -154,18 +157,18 @@ File Size  & Base Hardware Performance  & Estimated Software Overhead  & Predict
 Above is the result of sequential access.
 
 \begin{center}
-\begin{tabular}{| p{4cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} |}
-File Size  & Base Hardware Performance  & Estimated Software Overhead  & Predicted Time  & Measured Time   \\
+\begin{tabular}{| p{2cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} | p{3cm} }
+File Size  & Base Hardware Performance  & Estimated Software Overhead  & Predicted Time  & Measured Time  & Std \\
 \hline
-8KB & 800000 cycles& 10000 cycles& 810000 cycles& 1043427 cycles\\ 
-16KB & 800000 cycles& 10000 cycles& 810000 cycles& 1065662 cycles\\ 
-32KB & 800000 cycles& 10000 cycles& 810000 cycles& 1058558 cycles\\
-64KB & 800000 cycles& 10000 cycles& 810000 cycles& 1073499 cycles\\
-128KB & 800000 cycles& 10000 cycles& 810000 cycles& 1073262 cycles\\
-256KB & 800000 cycles& 10000 cycles& 810000 cycles& 1077349 cycles\\
-512KB & 800000 cycles& 10000 cycles& 810000 cycles& 1074041 cycles\\
-1024KB & 800000 cycles& 10000 cycles& 810000 cycles& 1074543 cycles\\
-2048KB & 800000 cycles& 10000 cycles& 810000 cycles& 1044684 cycles\\
+8KB & 800000 cycles& 10000 cycles& 810000 cycles& 1043427 cycles & 9400 cycles\\ 
+16KB & 800000 cycles& 10000 cycles& 810000 cycles& 1065662 cycles & 13298 cycles\\ 
+32KB & 800000 cycles& 10000 cycles& 810000 cycles& 1058558 cycles & 12201 cycles\\
+64KB & 800000 cycles& 10000 cycles& 810000 cycles& 1073499 cycles & 16652 cycles\\
+128KB & 800000 cycles& 10000 cycles& 810000 cycles& 1073262 cycles & 8553 cycles\\
+256KB & 800000 cycles& 10000 cycles& 810000 cycles& 1077349 cycles & 8890 cycles\\
+512KB & 800000 cycles& 10000 cycles& 810000 cycles& 1074041 cycles & 13009 cycles\\
+1024KB & 800000 cycles& 10000 cycles& 810000 cycles& 1074543 cycles & 10004 cycles\\
+2048KB & 800000 cycles& 10000 cycles& 810000 cycles& 1044684 cycles & 9330 cycles\\
 
 \end{tabular}
 \end{center}
@@ -192,24 +195,24 @@ We are sure that the more process number, the more cycles it spend on reading fi
 We present our measure results.
 
 \begin{center}
-\begin{tabular}{| p{4cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} |}
-nprocesses   & Base Hardware Performance  & Estimated Software Overhead  & Predicted Time  & Measured Time   \\
+\begin{tabular}{| p{2cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} |  p{3cm}}
+nprocesses   & Base Hardware Performance  & Estimated Software Overhead  & Predicted Time  & Measured Time  & Std \\
 \hline
-1 & 280000 cycles& 1000 cycles& 281000cycles & 229003 cycles\\
-2 & 295000 cycles& 2000 cycles& 297000 cycles& 253880 cycles\\
-3 & 310000 cycles& 3000 cycles& 313000 cycles& 209028 cycles\\
-4 & 325000 cycles& 4000 cycles& 329000 cycles& 240578 cycles\\
-5 & 340000 cycles& 5000 cycles& 345000 cycles& 432147 cycles\\
-6 & 355000 cycles& 6000 cycles& 371000 cycles& 438801 cycles\\
-7 & 370000 cycles& 7000 cycles& 377000 cycles& 459831 cycles\\
-8 & 385000 cycles& 8000 cycles& 393000 cycles& 415745 cycles\\
-9 & 400000 cycles& 9000 cycles& 409000 cycles& 474147 cycles\\
-10 & 415000 cycles& 10000 cycles& 425000 cycles& 491004 cycles\\
-11 & 430000 cycles& 11000 cycles& 441000 cycles& 515341 cycles\\
-12 & 445000 cycles& 12000 cycles& 457000 cycles& 515871 cycles\\
-13 & 460000 cycles& 13000 cycles& 473000 cycles& 536629 cycles\\
-14 & 475000 cycles& 14000 cycles& 489000 cycles& 568728 cycles\\
-15 & 490000 cycles& 15000 cycles& 505000 cycles& 590147 cycles\\
+1 & 280000 cycles& 1000 cycles& 281000cycles & 229003 cycles & 8572 cycles \\
+2 & 295000 cycles& 2000 cycles& 297000 cycles& 253880 cycles & 9400 cycles \\
+3 & 310000 cycles& 3000 cycles& 313000 cycles& 209028 cycles & 9210 cycles \\
+4 & 325000 cycles& 4000 cycles& 329000 cycles& 240578 cycles & 10450 cycles \\
+5 & 340000 cycles& 5000 cycles& 345000 cycles& 432147 cycles & 8322 cycles \\
+6 & 355000 cycles& 6000 cycles& 371000 cycles& 438801 cycles & 9726 cycles \\
+7 & 370000 cycles& 7000 cycles& 377000 cycles& 459831 cycles & 8625 cycles \\
+8 & 385000 cycles& 8000 cycles& 393000 cycles& 415745 cycles & 13392 cycles \\
+9 & 400000 cycles& 9000 cycles& 409000 cycles& 474147 cycles & 12209 cycles \\
+10 & 415000 cycles& 10000 cycles& 425000 cycles& 491004 cycles & 7490 cycles \\
+11 & 430000 cycles& 11000 cycles& 441000 cycles& 515341 cycles & 15526 cycles \\
+12 & 445000 cycles& 12000 cycles& 457000 cycles& 515871 cycles & 10024 cycles\\
+13 & 460000 cycles& 13000 cycles& 473000 cycles& 536629 cycles & 20047 cycles \\
+14 & 475000 cycles& 14000 cycles& 489000 cycles& 568728 cycles & 14478 cycles \\
+15 & 490000 cycles& 15000 cycles& 505000 cycles& 590147 cycles & 25980 cycles \\
 
 \end{tabular}
 \end{center}
