modift network report

--- a/report/appendix1.tex
+++ b/report/appendix1.tex
@@ -35,14 +35,14 @@ Page Fault Service Time & 8192 cycles& 8000 cycles& 16192 cycles& 8528 cycles & 
 \hline 
 Network & & & & & \\
 \hline
-Loopback RTT & 0.01 ms & 0.05 ms& 0.06 ms & 0.03ms & 0.00725ms \\
-Remote RTT & 0.05 ms& 0.2 ms & 0.25 ms & 0.27ms & 0.05ms\\
-Loopback Peak Bandwidth & & & 1600 MB/s & 1540 MB/s \\
-Remote Peak Bandwidth & & &  125 MB/s  & 133 MB/s\\
-Loopback Connection Setup & 35000 cycles& 5000 cycles& 40000 cycles& 306665 cycles \\
-Loopback Connection Tear-down & 20000 cycles& 3000 cycles& 23000 cycles& 54334 cycles \\
-Remote Connection Setup & 300000  cycles& 30000 cycles& 330000 cycles& 622923 cycles\\
-Remote Connection Tear-down & 150000  cycles& 15000 cycles& 165000 cycles& 141333 cycles\\
+Loopback RTT & 0.03 ms & 0.05 ms& 0.08 ms & 0.04ms & 0.00725ms \\
+Remote RTT & 0.2 ms& 0.05 ms & 0.25 ms & 0.27ms & 0.05ms\\
+Loopback Peak Bandwidth & & & 4000 MB/s & 3328.38 MB/s & 132.65MB/s\\
+Remote Peak Bandwidth & & &  120 MB/s  & 114.82 MB/s & 2.72MB/s\\
+Loopback Connection Setup & 0.0696ms & 0.0217ms & 0.0913ms & 0.133ms & 0.0112ms \\
+Loopback Connection Tear-down & 0.0696ms & 0.0217ms & 0.0913ms & 0.0236ms & 0.0035ms \\
+Remote Connection Setup & 0.391ms & 0.0217ms & 0.413ms & 0.271ms & 0.0179ms \\
+Remote Connection Tear-down & 0.391ms & 0.0217ms & 0.413ms & 0.0614ms & 0.0048ms \\
 
 \hline 
 File System& & & & \\
